[package]
name = "load_generator"
version = "0.1.0"
authors = ["simon-mo <xmo@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = ""
async-timer = {version = "", features = ["tokio_on"]}
