[package]
name = "nara"
version = "0.1.0"
authors = ["simon-mo <xmo@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.4"
async-timer = {version = "0.7.3", features = ["tokio_on"]}
indicatif = "0.14.0"
structopt = "0.3.11"
env_logger = "0.7.1"
log = "0.4.8"
hdrhistogram = "7.0.0"
# http = "0.2.0"
bindgen = "0.53.2"
