[package]
name = "nara"
version = "0.1.0"
authors = ["simon-mo <xmo@berkeley.edu>"]
edition = "2018"

[dependencies]
hyper = "0.13"
tokio = { version = "0.2.18", features = ["full"] }
futures = "0.3.4"
async-timer = {version = "0.7.3", features = ["tokio_on"]}
indicatif = "0.14.0"
structopt = "0.3.11"
env_logger = "0.7.1"
log = "0.4.8"
hdrhistogram = "7.0.0"
nara-core = { path = "./nara-core"}

[workspace]
members = ["nara-core", "nara_py"]