[package]
name = "nara-py"
version = "0.1.0"
authors = ["simon-mo <xmo@berkeley.edu>"]
edition = "2018"

[lib]
name = "nara_py"
crate-type = ["cdylib"]

[dependencies]
nara-core = { path = "../nara-core"}
rayon = "1.3.0"


[dependencies.pyo3]
version = "0.9.2"
features = ["extension-module"]

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]